test/files/run/StubErrorHK.check
error: newSource1.scala:4: Symbol 'type stuberrors.A' is missing from the classpath.
This symbol is required by 'type stuberrors.B.D'.
Make sure that type A is in your classpath and check for conflicting dependencies with `-Ylog-classpath`.
A full rebuild may help if 'B.class' was compiled against an incompatible version of stuberrors.
      println(new B)
                  ^
